* Corrected stylesheet not set on error pages (Chris T)
* Tightened up permissions on menu items and employee management (Chris T)
* Corrected permissions on fixed asset depreciation workflow/menu (Chris T)
* Corrected Perl issues on _db_init when custom fields defined, 5.12 (Chris T)
* Adding missing permissions for editing parts (Chris T)

Hilton D is Hilton Day

Changelog for 1.3.11
* Fixed outstanding report for payment reversal and partial payments (Chris T)
* Fixed handling of non-existing roles in menu grants (Chris T)
* Added reverse_bank_recs setting for those that want to
  do recs from bank perspective (Chris T)
* Added "bank register mode" for account transaction lists (Chris T)
* Fixed join projection issue in draft search routine (Chris T)
* Fixed prepare-database.sh for Pg 9.1 (Erik H)
* Fixed Customer/vendor selection for dropdowns (Chris T)
* Fixed some HASH() entries in CSV templates (Chris T)
* Removed unnecessary shebang lines in scripts/* files (Robert C)
* Fixed GL recurring transaction not posting (Chris T)
* Improved error handling when extensions/contrib scripts not found (Chris T)
* Fixed multicurrency handling in bulk payment interface (Chris T and Erik H)
* Corrected a number of number parsing/i18n issues (Herman V)
* Corrected pos_cashier inadequate permissions (Chris T)
* Corrected templates directive not handled properly (Chris T)

Chris T is Chris Travers
Erik H is Erik Huelsmann
Herman V is Herman Vierendeels
Robert C is Robert James Clay

Changelog for 1.3.10
* Fixes for permissions for exchangerate table (Erik H)
* Fixes for POS cashier permissions.  (Chris T)
* More Localization Fixes (Herman V)
* Customer/Vendor Search now shows records without credit accounts (Herman V)
* Better error handling contrib modules not found (Chris T)
* pos.conf.pl no longer overwritten on upgrade (Chris T)
* Fixed multi-currency single payment handling (Erik H / Chris T)
* Fixed "New Window" not working (Erik H)